# HCP_web_crawller

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  start.sh
frontend/: app.py
helm/: Chart.yaml  values.yaml
helm/templates/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
sample_data/: create_sample.py
src/hcp_crawler/: __init__.py  config.py  main.py
src/hcp_crawler/api/: routes.py
src/hcp_crawler/db/: session.py
src/hcp_crawler/models/: database.py  schemas.py
src/hcp_crawler/services/: excel_service.py  llm_service.py  scraper_service.py  search_service.py  stats_service.py
src/hcp_crawler/services/agent/: graph.py  nodes.py  state.py
src/hcp_crawler/utils/: logger.py
tests/: test_api.py  test_excel_service.py  test_llm_service.py  test_search_service.py
